# DeltaPD

./: .editorconfig  .gitattributes  .gitignore  DeltaPD_thesis_refactor_audit.md  README.md  _fix_imports.py  benchmark_renders.py  cli.py  plot_mat_file.py  pyproject.toml  test_outlier_sensitivity.py
campaign/: config_thesis.yaml
docs/: assumptions.md  io_spec.md
examples/: generate_synthetic.py  plot_empirical.py  run_empirical.py  run_pipeline.py
exports/: empirical_morphology_20260303_012028.parquet  empirical_morphology_20260303_015506.parquet  empirical_morphology_20260303_015546.parquet  empirical_morphology_20260303_015914.parquet  empirical_morphology_20260303_020025.parquet  empirical_morphology_20260303_024439.parquet  empirical_tracking_20260303_005234.parquet  empirical_tracking_20260303_015530.parquet  empirical_tracking_20260303_015546.parquet  empirical_tracking_20260303_015914.parquet  empirical_tracking_20260303_020025.parquet  empirical_tracking_20260303_024439.parquet  empirical_tracking_20260303_030554.parquet  empirical_tracking_20260303_033247.parquet  empirical_tracking_20260303_040331.parquet  empirical_tracking_20260303_040732.parquet
scripts/: plot_chapter_v.py
tests/: conftest.py  test_decision_layer.py  test_descriptors.py  test_improvements.py  test_loader.py  test_pipeline.py  test_q1_validation.py  test_real_ingestion.py  test_thesis_campaign.py  test_trackers.py
thesis_campaign/: __init__.py  aggregate.py  config.py  config_material.yaml  config_thesis.yaml  detection_curves.py  material_state.py  metrics_spectral.py  (+3 more)
(+18 files in other folders)
